[tool.poetry]
name = "telegram-bot-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
pandas = "1.3.5"
python = "^3.8"
pyTelegramBotAPI = "^4.3.1"
yahoofinancials = "^1.6"
yfinance = "^0.1.69"
plotly = "^5.5.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash = "^2.0.0"
textblob = "^0.17.1"
config = "^0.5.1"
praw = "^7.5.0"
repl = "^1.0"
kaleido = "0.2.1"
replit = "^3.2.4"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
